@@ -29,6 +29,7 @@ import java.io.OutputStreamWriter;
 import java.io.PrintWriter;
 import java.io.RandomAccessFile;
 import java.io.Reader;
+import java.io.Serial;
 import java.io.Serializable;
 import java.io.StringReader;
 import java.io.StringWriter;
@@ -73,6 +74,7 @@ import org.apache.catalina.util.ServerInfo;
 import org.apache.catalina.util.URLEncoder;
 import org.apache.catalina.webresources.CachedResource;
 import org.apache.tomcat.util.buf.B2CConverter;
+import org.apache.tomcat.util.http.FastHttpDateFormat;
 import org.apache.tomcat.util.http.ResponseUtil;
 import org.apache.tomcat.util.http.parser.ContentRange;
 import org.apache.tomcat.util.http.parser.EntityTag;
@@ -130,6 +132,7 @@ import org.apache.tomcat.util.security.Escape;
  */
 public class DefaultServlet extends HttpServlet {
 
+    @Serial
     private static final long serialVersionUID = 1L;
 
     /**
@@ -235,11 +238,6 @@ public class DefaultServlet extends HttpServlet {
     protected int sendfileSize = 48 * 1024;
 
     /**
-     * Should the Accept-Ranges: bytes header be send with static resources?
-     */
-    protected boolean useAcceptRanges = true;
-
-    /**
      * Flag to determine if server information is presented.
      */
     protected boolean showServerInfo = true;
@@ -258,6 +256,18 @@ public class DefaultServlet extends HttpServlet {
      * Flag that indicates whether partial PUTs are permitted.
      */
     private boolean allowPartialPut = true;
+
+    /**
+     * Use strong etags whenever possible.
+     */
+    private boolean useStrongETags = false;
+
+    /**
+     * Will direct ({@link DispatcherType#REQUEST} or {@link DispatcherType#ASYNC}) requests using the POST method be
+     * processed as GET requests. If not allowed, direct requests using the POST method will be rejected with a 405
+     * (method not allowed).
+     */
+    private boolean allowPostAsGet = false;
 
 
     // --------------------------------------------------------- Public Methods
@@ -296,7 +306,7 @@ public class DefaultServlet extends HttpServlet {
                     directoryRedirectStatusCode = statusCode;
                     break;
                 default:
-                    log("Invalid redirectStatusCode of " + statusCode);
+                    log(sm.getString("defaultServlet.invalidRedirectStatusCode", Integer.valueOf(statusCode)));
             }
         }
 
@@ -347,10 +357,6 @@ public class DefaultServlet extends HttpServlet {
         localXsltFile = getServletConfig().getInitParameter("localXsltFile");
         readmeFile = getServletConfig().getInitParameter("readmeFile");
 
-        if (getServletConfig().getInitParameter("useAcceptRanges") != null) {
-            useAcceptRanges = Boolean.parseBoolean(getServletConfig().getInitParameter("useAcceptRanges"));
-        }
-
         // Prevent the use of buffer sizes that are too small
         if (input < 256) {
             input = 256;
@@ -392,6 +398,14 @@ public class DefaultServlet extends HttpServlet {
 
         if (getServletConfig().getInitParameter("allowPartialPut") != null) {
             allowPartialPut = Boolean.parseBoolean(getServletConfig().getInitParameter("allowPartialPut"));
+        }
+
+        if (getServletConfig().getInitParameter("useStrongETags") != null) {
+            useStrongETags = Boolean.parseBoolean(getServletConfig().getInitParameter("useStrongETags"));
+        }
+
+        if (getServletConfig().getInitParameter("allowPostAsGet") != null) {
+            allowPostAsGet = Boolean.parseBoolean(getServletConfig().getInitParameter("allowPostAsGet"));
         }
     }
 
@@ -451,13 +465,13 @@ public class DefaultServlet extends HttpServlet {
         }
 
         StringBuilder result = new StringBuilder();
-        if (servletPath.length() > 0) {
+        if (!servletPath.isEmpty()) {
             result.append(servletPath);
         }
         if (pathInfo != null) {
             result.append(pathInfo);
         }
-        if (result.length() == 0 && !allowEmptyPath) {
+        if (result.isEmpty() && !allowEmptyPath) {
             result.append('/');
         }
 
@@ -475,6 +489,16 @@ public class DefaultServlet extends HttpServlet {
      */
     protected String getPathPrefix(final HttpServletRequest request) {
         return request.getContextPath();
+    }
+
+
+    protected boolean isListings() {
+        return listings;
+    }
+
+
+    protected boolean isReadOnly() {
+        return readOnly || resources.isReadOnly();
     }
 
 
@@ -537,10 +561,14 @@ public class DefaultServlet extends HttpServlet {
         StringBuilder allow = new StringBuilder();
 
         // Start with methods that are always allowed
-        allow.append("OPTIONS, GET, HEAD, POST");
+        allow.append("OPTIONS, GET, HEAD");
+
+        if (allowPostAsGet) {
+            allow.append(", POST");
+        }
 
         // PUT and DELETE depend on readonly
-        if (!readOnly) {
+        if (!isReadOnly()) {
             allow.append(", PUT, DELETE");
         }
 
@@ -562,14 +590,39 @@ public class DefaultServlet extends HttpServlet {
     @Override
     protected void doPost(HttpServletRequest request, HttpServletResponse response)
             throws IOException, ServletException {
-        doGet(request, response);
+        if (allowPostAsGet) {
+            doGet(request, response);
+        } else {
+            // Use a switch without a default to ensure all possibilities are explicitly handled
+            switch (request.getDispatcherType()) {
+                case ASYNC:
+                case REQUEST: {
+                    // Direct POST requests may not be processed as GET
+                    sendNotAllowed(request, response);
+                    break;
+                }
+                case ERROR:
+                case FORWARD:
+                case INCLUDE: {
+                    /*
+                     * Forward and Include are processed as GET as it is possible that a POST to a servlet may use a
+                     * forward or an include as part of generating the response.
+                     *
+                     * Error should have already been converted to GET but convert here anyway as that is better than
+                     * failing the request.
+                     */
+                    doGet(request, response);
+                    break;
+                }
+            }
+        }
     }
 
 
     @Override
     protected void doPut(HttpServletRequest req, HttpServletResponse resp) throws ServletException, IOException {
 
-        if (readOnly) {
+        if (isReadOnly()) {
             sendNotAllowed(req, resp);
             return;
         }
@@ -585,8 +638,12 @@ public class DefaultServlet extends HttpServlet {
             return;
         }
 
-        InputStream resourceInputStream = null;
+        if (!checkIfHeaders(req, resp, resource)) {
+            return;
+        }
 
+        InputStream resourceInputStream = null;
+        File tempContentFile = null;
         try {
             // Append data specified in ranges to existing content for this
             // resource - create a temp. file on the local filesystem to
@@ -595,18 +652,25 @@ public class DefaultServlet extends HttpServlet {
             if (range == IGNORE) {
                 resourceInputStream = req.getInputStream();
             } else {
-                File contentFile = executePartialPut(req, range, path);
-                resourceInputStream = new FileInputStream(contentFile);
+                tempContentFile = executePartialPut(req, range, path);
+                if (tempContentFile != null) {
+                    resourceInputStream = new FileInputStream(tempContentFile);
+                }
             }
 
-            if (resources.write(path, resourceInputStream, true)) {
+            if (resourceInputStream != null && resources.write(path, resourceInputStream, true)) {
                 if (resource.exists()) {
                     resp.setStatus(HttpServletResponse.SC_NO_CONTENT);
                 } else {
                     resp.setStatus(HttpServletResponse.SC_CREATED);
                 }
             } else {
-                resp.sendError(HttpServletResponse.SC_CONFLICT);
+                try {
+                    resp.sendError(resourceInputStream != null ?
+                            HttpServletResponse.SC_CONFLICT : HttpServletResponse.SC_BAD_REQUEST);
+                } catch (IllegalStateException e) {
+                    // Already committed, ignore
+                }
             }
         } finally {
             if (resourceInputStream != null) {
@@ -614,6 +678,11 @@ public class DefaultServlet extends HttpServlet {
                     resourceInputStream.close();
                 } catch (IOException ioe) {
                     // Ignore
+                }
+            }
+            if (tempContentFile != null) {
+                if (!tempContentFile.delete()) {
+                    log(sm.getString("defaultServlet.deleteTempFileFailed", tempContentFile.getAbsolutePath()));
                 }
             }
         }
@@ -638,13 +707,7 @@ public class DefaultServlet extends HttpServlet {
         // resource - create a temp. file on the local filesystem to
         // perform this operation
         File tempDir = (File) getServletContext().getAttribute(ServletContext.TEMPDIR);
-        // Convert all '/' characters to '.' in resourcePath
-        String convertedResourcePath = path.replace('/', '.');
-        File contentFile = new File(tempDir, convertedResourcePath);
-        if (contentFile.createNewFile()) {
-            // Clean up contentFile when Tomcat is terminated
-            contentFile.deleteOnExit();
-        }
+        File contentFile = File.createTempFile("put-part-", null, tempDir);
 
         try (RandomAccessFile randAccessContentFile = new RandomAccessFile(contentFile, "rw")) {
 
@@ -668,13 +731,31 @@ public class DefaultServlet extends HttpServlet {
 
             // Append data in request input stream to contentFile
             randAccessContentFile.seek(range.getStart());
+            long received = 0;
             int numBytesRead;
             byte[] transferBuffer = new byte[BUFFER_SIZE];
             try (BufferedInputStream requestBufInStream = new BufferedInputStream(req.getInputStream(), BUFFER_SIZE)) {
+                long rangeBytes = range.getEnd() - range.getStart() + 1L;
                 while ((numBytesRead = requestBufInStream.read(transferBuffer)) != -1) {
+                    received += numBytesRead;
+                    if (received > rangeBytes) {
+                        throw new IllegalStateException(sm.getString("defaultServlet.wrongByteCountForRange",
+                                String.valueOf(received), String.valueOf(rangeBytes)));
+                    }
                     randAccessContentFile.write(transferBuffer, 0, numBytesRead);
                 }
+                if (received < rangeBytes) {
+                    throw new IllegalStateException(sm.getString("defaultServlet.wrongByteCountForRange",
+                            String.valueOf(received), String.valueOf(rangeBytes)));
+                }
             }
+
+        } catch (IOException | RuntimeException | Error e) {
+            // This has to be done this way to be able to close the file without changing the method signature
+            if (!contentFile.delete()) {
+                log(sm.getString("defaultServlet.deleteTempFileFailed", contentFile.getAbsolutePath()));
+            }
+            return null;
         }
 
         return contentFile;
@@ -684,7 +765,7 @@ public class DefaultServlet extends HttpServlet {
     @Override
     protected void doDelete(HttpServletRequest req, HttpServletResponse resp) throws ServletException, IOException {
 
-        if (readOnly) {
+        if (isReadOnly()) {
             sendNotAllowed(req, resp);
             return;
         }
@@ -693,16 +774,19 @@ public class DefaultServlet extends HttpServlet {
 
         WebResource resource = resources.getResource(path);
 
+        if (!checkIfHeaders(req, resp, resource)) {
+            return;
+        }
+
         if (resource.exists()) {
             if (resource.delete()) {
                 resp.setStatus(HttpServletResponse.SC_NO_CONTENT);
             } else {
-                resp.sendError(HttpServletResponse.SC_METHOD_NOT_ALLOWED);
+                sendNotAllowed(req, resp);
             }
         } else {
             resp.sendError(HttpServletResponse.SC_NOT_FOUND);
         }
-
     }
 
 
@@ -720,10 +804,21 @@ public class DefaultServlet extends HttpServlet {
      */
     protected boolean checkIfHeaders(HttpServletRequest request, HttpServletResponse response, WebResource resource)
             throws IOException {
-
-        return checkIfMatch(request, response, resource) && checkIfModifiedSince(request, response, resource) &&
-                checkIfNoneMatch(request, response, resource) && checkIfUnmodifiedSince(request, response, resource);
-
+        if (request.getHeader("If-Match") != null) {
+            if (!checkIfMatch(request, response, resource)) {
+                return false;
+            }
+        } else if (request.getHeader("If-Unmodified-Since") != null) {
+            if (!checkIfUnmodifiedSince(request, response, resource)) {
+                return false;
+            }
+        }
+        if (request.getHeader("If-None-Match") != null) {
+            return checkIfNoneMatch(request, response, resource);
+        } else if (request.getHeader("If-Modified-Since") != null) {
+            return checkIfModifiedSince(request, response, resource);
+        }
+        return true;
     }
 
 
@@ -767,7 +862,7 @@ public class DefaultServlet extends HttpServlet {
             }
         }
 
-        if (path.length() == 0) {
+        if (path.isEmpty()) {
             // Context root redirect
             doDirectoryRedirect(request, response);
             return;
@@ -791,6 +886,10 @@ public class DefaultServlet extends HttpServlet {
             if (isError) {
                 response.sendError(((Integer) request.getAttribute(RequestDispatcher.ERROR_STATUS_CODE)).intValue());
             } else {
+                // Need to check If headers before we return a 404
+                if (!checkIfHeaders(request, response, resource)) {
+                    return;
+                }
                 response.sendError(HttpServletResponse.SC_NOT_FOUND,
                         sm.getString("defaultServlet.missingResource", requestUri));
             }
@@ -819,15 +918,6 @@ public class DefaultServlet extends HttpServlet {
         }
 
         boolean included = false;
-        // Check if the conditions specified in the optional If headers are
-        // satisfied.
-        if (resource.isFile()) {
-            // Checking If headers
-            included = (request.getAttribute(RequestDispatcher.INCLUDE_CONTEXT_PATH) != null);
-            if (!included && !isError && !checkIfHeaders(request, response, resource)) {
-                return;
-            }
-        }
 
         // Find content type.
         String contentType = resource.getMimeType();
@@ -841,11 +931,21 @@ public class DefaultServlet extends HttpServlet {
         // be needed later
         String eTag = null;
         String lastModifiedHttp = null;
+
         if (resource.isFile() && !isError) {
             eTag = generateETag(resource);
             lastModifiedHttp = resource.getLastModifiedHttp();
         }
 
+        // Check if the conditions specified in the optional If headers are
+        // satisfied.
+        if (resource.isFile()) {
+            // Checking If headers
+            included = (request.getAttribute(RequestDispatcher.INCLUDE_CONTEXT_PATH) != null);
+            if (!included && !isError && !checkIfHeaders(request, response, resource)) {
+                return;
+            }
+        }
 
         // Serve a precompressed version of the file if present
         boolean usingPrecompressedVersion = false;
@@ -873,7 +973,7 @@ public class DefaultServlet extends HttpServlet {
 
             // Skip directory listings if we have been configured to
             // suppress them
-            if (!listings) {
+            if (!isListings()) {
                 response.sendError(HttpServletResponse.SC_NOT_FOUND,
                         sm.getString("defaultServlet.missingResource", request.getRequestURI()));
                 return;
@@ -881,10 +981,8 @@ public class DefaultServlet extends HttpServlet {
             contentType = "text/html;charset=UTF-8";
         } else {
             if (!isError) {
-                if (useAcceptRanges) {
-                    // Accept ranges header
-                    response.setHeader("Accept-Ranges", "bytes");
-                }
+                // Accept ranges header
+                response.setHeader("Accept-Ranges", "bytes");
 
                 // Parse range specifier
                 ranges = parseRange(request, response, resource);
@@ -1077,7 +1175,7 @@ public class DefaultServlet extends HttpServlet {
 
         } else {
 
-            if ((ranges == null) || (ranges.getEntries().isEmpty())) {
+            if (ranges.getEntries().isEmpty()) {
                 return;
             }
 
@@ -1087,7 +1185,7 @@ public class DefaultServlet extends HttpServlet {
 
             if (ranges.getEntries().size() == 1) {
 
-                Ranges.Entry range = ranges.getEntries().get(0);
+                Ranges.Entry range = ranges.getEntries().getFirst();
                 long start = getStart(range, contentLength);
                 long end = getEnd(range, contentLength);
                 response.addHeader("Content-Range", "bytes " + start + "-" + end + "/" + contentLength);
@@ -1159,7 +1257,7 @@ public class DefaultServlet extends HttpServlet {
             skip(is, 2, stripBom);
             return StandardCharsets.UTF_16BE;
         }
-        // Delay the UTF_16LE check if there are more that 2 bytes since it
+        // Delay the UTF_16LE check if there are more than 2 bytes since it
         // overlaps with UTF-32LE.
         if (count == 2 && b0 == 0xFF && b1 == 0xFE) {
             skip(is, 2, stripBom);
@@ -1224,16 +1322,45 @@ public class DefaultServlet extends HttpServlet {
                 contentType.contains("/javascript");
     }
 
-    private static boolean validate(ContentRange range) {
-        // bytes is the only range unit supported
-        return (range != null) && ("bytes".equals(range.getUnits())) && (range.getStart() >= 0) &&
-                (range.getEnd() >= 0) && (range.getStart() <= range.getEnd()) && (range.getLength() > 0);
-    }
-
-    private static boolean validate(Ranges.Entry range, long length) {
-        long start = getStart(range, length);
-        long end = getEnd(range, length);
-        return (start >= 0) && (end >= 0) && (start <= end);
+    private static boolean validate(Ranges ranges, long length) {
+        List<long[]> rangeContext = new ArrayList<>();
+        int overlapCount = 0;
+        for (Ranges.Entry range : ranges.getEntries()) {
+            long start = getStart(range, length);
+            long end = getEnd(range, length);
+            if (start < 0 || start > end) {
+                // Invalid range
+                return false;
+            }
+            /*
+             * See https://www.rfc-editor.org/rfc/rfc9110.html#name-range and
+             * https://www.rfc-editor.org/rfc/rfc9110.html#status.416
+             *
+             * The server MAY ignore or reject Range headers with:
+             *
+             * - "Many" (undefined) small ranges not in ascending order - not currently enforced.
+             *
+             * - More than two overlapping ranges (enforced)
+             */
+            for (long[] r : rangeContext) {
+                long s2 = r[0];
+                long e2 = r[1];
+                // Given valid [s1,e1] and [s2,e2]
+                // If { s1>e2 || s2>e1 } then no overlap
+                // equivalent to
+                // If not { s1>e2 || s2>e1 } then overlap
+                // De Morgan's law
+                if (start <= e2 && s2 <= end) {
+                    overlapCount++;
+                    // Off by one is deliberate. There is 1 more overlapping range than there are overlaps.
+                    if (overlapCount > 1) {
+                        return false;
+                    }
+                }
+            }
+            rangeContext.add(new long[] { start, end });
+        }
+        return true;
     }
 
     private static long getStart(Ranges.Entry range, long length) {
@@ -1319,7 +1446,7 @@ public class DefaultServlet extends HttpServlet {
                         continue;
                     }
                     if ("*".equals(encoding)) {
-                        bestResource = precompressedResources.get(0);
+                        bestResource = precompressedResources.getFirst();
                         bestResourceQuality = quality;
                         bestResourcePreference = 0;
                         continue;
@@ -1387,8 +1514,8 @@ public class DefaultServlet extends HttpServlet {
             response.sendError(HttpServletResponse.SC_BAD_REQUEST);
             return null;
         }
-
-        if (!validate(contentRange)) {
+        // bytes is the only range unit supported
+        if (!"bytes".equals(contentRange.getUnits())) {
             response.sendError(HttpServletResponse.SC_BAD_REQUEST);
             return null;
         }
@@ -1399,6 +1526,9 @@ public class DefaultServlet extends HttpServlet {
 
     /**
      * Parse the range header.
+     * <p>
+     * The caller is required to have confirmed that the requested resource exists and is a file before calling this
+     * method.
      *
      * @param request  The servlet request we are processing
      * @param response The servlet response we are creating
@@ -1412,39 +1542,35 @@ public class DefaultServlet extends HttpServlet {
     protected Ranges parseRange(HttpServletRequest request, HttpServletResponse response, WebResource resource)
             throws IOException {
 
-        // Range headers are only valid on GET requests. That implies they are
-        // also valid on HEAD requests. This method is only called by doGet()
-        // and doHead() so no need to check the request method.
+        // Retrieving the range header (if any is specified)
+        String rangeHeader = request.getHeader("Range");
 
-        // Checking If-Range
-        String headerValue = request.getHeader("If-Range");
+        if (rangeHeader == null) {
+            // No Range header is the same as ignoring any Range header
+            return FULL;
+        }
 
-        if (headerValue != null) {
+        if (!"GET".equals(request.getMethod()) || !isRangeRequestsSupported()) {
+            // RFC 9110 - Section 14.2: GET is the only method for which range handling is defined.
+            // Otherwise MUST ignore a Range header field
+            return FULL;
+        }
 
-            long headerValueTime = (-1L);
-            try {
-                headerValueTime = request.getDateHeader("If-Range");
-            } catch (IllegalArgumentException e) {
-                // Ignore
+        // Evaluate If-Range
+        if (!checkIfRange(request, response, resource)) {
+            if (response.isCommitted()) {
+                /*
+                 * Ideally, checkIfRange() would be changed to return Boolean so the three states (satisfied,
+                 * unsatisfied and error) could each be communicated via the return value. There isn't a backwards
+                 * compatible way to do that that doesn't involve changing the method name and there are benefits to
+                 * retaining the consistency of the existing method name pattern. Hence, this 'trick'. For the error
+                 * state, checkIfRange() will call response.sendError() which will commit the response which this method
+                 * can then detect.
+                 */
+                return null;
             }
-
-            String eTag = generateETag(resource);
-            long lastModified = resource.getLastModified();
-
-            if (headerValueTime == (-1L)) {
-                // If the ETag the client gave does not match the entity
-                // etag, then the entire entity is returned.
-                if (!eTag.equals(headerValue.trim())) {
-                    return FULL;
-                }
-            } else {
-                // If the timestamp of the entity the client got differs from
-                // the last modification date of the entity, the entire entity
-                // is returned.
-                if (Math.abs(lastModified - headerValueTime) > 1000) {
-                    return FULL;
-                }
-            }
+            // No error but If-Range not satisfied
+            return FULL;
         }
 
         long fileLength = resource.getContentLength();
@@ -1455,13 +1581,6 @@ public class DefaultServlet extends HttpServlet {
             return FULL;
         }
 
-        // Retrieving the range header (if any is specified
-        String rangeHeader = request.getHeader("Range");
-
-        if (rangeHeader == null) {
-            // No Range header is the same as ignoring any Range header
-            return FULL;
-        }
 
         Ranges ranges = Ranges.parse(new StringReader(rangeHeader));
 
@@ -1483,12 +1602,10 @@ public class DefaultServlet extends HttpServlet {
             return FULL;
         }
 
-        for (Ranges.Entry range : ranges.getEntries()) {
-            if (!validate(range, fileLength)) {
-                response.addHeader("Content-Range", "bytes */" + fileLength);
-                response.sendError(HttpServletResponse.SC_REQUESTED_RANGE_NOT_SATISFIABLE);
-                return null;
-            }
+        if (!validate(ranges, fileLength)) {
+            response.addHeader("Content-Range", "bytes */" + fileLength);
+            response.sendError(HttpServletResponse.SC_REQUESTED_RANGE_NOT_SATISFIABLE);
+            return null;
         }
 
         return ranges;
@@ -1650,6 +1767,9 @@ public class DefaultServlet extends HttpServlet {
 
         StringBuilder sb = new StringBuilder();
 
+        // Get the right strings
+        StringManager sm = StringManager.getManager(DefaultServlet.class.getPackageName(), request.getLocales());
+
         String directoryWebappPath = resource.getWebappPath();
         WebResource[] entries = resources.listResources(directoryWebappPath);
 
@@ -1657,22 +1777,19 @@ public class DefaultServlet extends HttpServlet {
         String rewrittenContextPath = rewriteUrl(contextPath);
 
         // Render the page header
-        sb.append("<!doctype html><html>\r\n");
-        /*
-         * TODO Activate this as soon as we use smClient with the request locales
-         * sb.append("<!doctype html><html lang=\""); sb.append(smClient.getLocale().getLanguage()).append("\">\r\n");
-         */
+        sb.append("<!doctype html>\r\n");
+        sb.append("<html lang=\"").append(sm.getLocale().getLanguage()).append("\">\r\n");
         sb.append("<head>\r\n");
         sb.append("<title>");
-        sb.append(sm.getString("directory.title", directoryWebappPath));
+        sb.append(sm.getString("defaultServlet.directory.title", directoryWebappPath));
         sb.append("</title>\r\n");
         sb.append("<style>");
         sb.append(org.apache.catalina.util.TomcatCSS.TOMCAT_CSS);
-        sb.append("</style> ");
+        sb.append("</style>\r\n");
         sb.append("</head>\r\n");
-        sb.append("<body>");
+        sb.append("<body>\r\n");
         sb.append("<h1>");
-        sb.append(sm.getString("directory.title", directoryWebappPath));
+        sb.append(sm.getString("defaultServlet.directory.title", directoryWebappPath));
 
         // Render the link to our parent (if required)
         String parentDirectory = directoryWebappPath;
@@ -1682,9 +1799,9 @@ public class DefaultServlet extends HttpServlet {
         int slash = parentDirectory.lastIndexOf('/');
         if (slash >= 0) {
             String parent = directoryWebappPath.substring(0, slash);
-            sb.append(" - <a href=\"");
+            sb.append(" \u2013 <a href=\"");
             sb.append(rewrittenContextPath);
-            if (parent.equals("")) {
+            if (parent.isEmpty()) {
                 parent = "/";
             }
             sb.append(rewriteUrl(parent));
@@ -1693,64 +1810,67 @@ public class DefaultServlet extends HttpServlet {
             }
             sb.append("\">");
             sb.append("<b>");
-            sb.append(sm.getString("directory.parent", parent));
+            sb.append(sm.getString("defaultServlet.directory.parent", parent));
             sb.append("</b>");
             sb.append("</a>");
         }
 
-        sb.append("</h1>");
-        sb.append("<hr class=\"line\">");
+        sb.append("</h1>\r\n");
+        sb.append("<hr class=\"line\">\r\n");
 
         sb.append("<table width=\"100%\" cellspacing=\"0\"" + " cellpadding=\"5\" align=\"center\">\r\n");
 
         SortManager.Order order;
-        if (sortListings && null != request) {
+        if (sortListings) {
             order = sortManager.getOrder(request.getQueryString());
         } else {
             order = null;
         }
         // Render the column headings
+        sb.append("<thead>\r\n");
         sb.append("<tr>\r\n");
-        sb.append("<td align=\"left\"><font size=\"+1\"><strong>");
-        if (sortListings && null != request) {
+        sb.append("<th align=\"left\"><font size=\"+1\"><strong>");
+        if (order != null) {
             sb.append("<a href=\"?C=N;O=");
             sb.append(getOrderChar(order, 'N'));
             sb.append("\">");
-            sb.append(sm.getString("directory.filename"));
+            sb.append(sm.getString("defaultServlet.resource.name"));
             sb.append("</a>");
         } else {
-            sb.append(sm.getString("directory.filename"));
+            sb.append(sm.getString("defaultServlet.resource.name"));
         }
-        sb.append("</strong></font></td>\r\n");
-        sb.append("<td align=\"center\"><font size=\"+1\"><strong>");
-        if (sortListings && null != request) {
+        sb.append("</strong></font></th>\r\n");
+        sb.append("<th align=\"center\"><font size=\"+1\"><strong>");
+        if (order != null) {
             sb.append("<a href=\"?C=S;O=");
             sb.append(getOrderChar(order, 'S'));
             sb.append("\">");
-            sb.append(sm.getString("directory.size"));
+            sb.append(sm.getString("defaultServlet.resource.size"));
             sb.append("</a>");
         } else {
-            sb.append(sm.getString("directory.size"));
+            sb.append(sm.getString("defaultServlet.resource.size"));
         }
-        sb.append("</strong></font></td>\r\n");
-        sb.append("<td align=\"right\"><font size=\"+1\"><strong>");
-        if (sortListings && null != request) {
+        sb.append("</strong></font></th>\r\n");
+        sb.append("<th align=\"right\"><font size=\"+1\"><strong>");
+        if (order != null) {
             sb.append("<a href=\"?C=M;O=");
             sb.append(getOrderChar(order, 'M'));
             sb.append("\">");
-            sb.append(sm.getString("directory.lastModified"));
+            sb.append(sm.getString("defaultServlet.resource.lastModified"));
             sb.append("</a>");
         } else {
-            sb.append(sm.getString("directory.lastModified"));
+            sb.append(sm.getString("defaultServlet.resource.lastModified"));
         }
-        sb.append("</strong></font></td>\r\n");
-        sb.append("</tr>");
+        sb.append("</strong></font></th>\r\n");
+        sb.append("</tr>\r\n");
+        sb.append("</thead>\r\n");
 
-        if (null != sortManager && null != request) {
+        if (null != sortManager) {
             sortManager.sort(entries, request.getQueryString());
         }
 
         boolean shade = false;
+        sb.append("<tbody>\r\n");
         for (WebResource childResource : entries) {
             String filename = childResource.getName();
             if (filename.equalsIgnoreCase("WEB-INF") || filename.equalsIgnoreCase("META-INF")) {
@@ -1791,25 +1911,26 @@ public class DefaultServlet extends HttpServlet {
             sb.append("</tt></td>\r\n");
 
             sb.append("<td align=\"right\"><tt>");
-            sb.append(childResource.getLastModifiedHttp());
+            sb.append(renderTimestamp(childResource.getLastModified()));
             sb.append("</tt></td>\r\n");
 
             sb.append("</tr>\r\n");
         }
+        sb.append("</tbody>\r\n");
 
         // Render the page footer
         sb.append("</table>\r\n");
 
-        sb.append("<hr class=\"line\">");
+        sb.append("<hr class=\"line\">\r\n");
 
         String readme = getReadme(resource, encoding);
         if (readme != null) {
             sb.append(readme);
-            sb.append("<hr class=\"line\">");
+            sb.append("<hr class=\"line\">\r\n");
         }
 
         if (showServerInfo) {
-            sb.append("<h3>").append(ServerInfo.getServerInfo()).append("</h3>");
+            sb.append("<h3>").append(ServerInfo.getServerInfo()).append("</h3>\r\n");
         }
         sb.append("</body>\r\n");
         sb.append("</html>\r\n");
@@ -1837,7 +1958,21 @@ public class DefaultServlet extends HttpServlet {
             rightSide = 1;
         }
 
-        return ("" + leftSide + "." + rightSide + " KiB");
+        return (String.valueOf(leftSide) + "." + String.valueOf(rightSide) + " KiB");
+
+    }
+
+
+    /**
+     * Render the specified file timestamp.
+     *
+     * @param timestamp File timestamp
+     *
+     * @return the formatted timestamp
+     */
+    protected String renderTimestamp(long timestamp) {
+
+        return FastHttpDateFormat.formatDate(timestamp);
 
     }
 
@@ -1863,7 +1998,10 @@ public class DefaultServlet extends HttpServlet {
                     } else {
                         reader = new InputStreamReader(is);
                     }
-                    copyRange(reader, new PrintWriter(buffer));
+                    IOException e = copyRange(reader, new PrintWriter(buffer));
+                    if (debug > 10) {
+                        log("readme '" + readmeFile + "' output error: " + e.getMessage());
+                    }
                 } catch (IOException e) {
                     log(sm.getString("defaultServlet.readerCloseFailed"), e);
                 } finally {
@@ -1871,6 +2009,7 @@ public class DefaultServlet extends HttpServlet {
                         try {
                             reader.close();
                         } catch (IOException e) {
+                            // Ignore
                         }
                     }
                 }
@@ -1924,17 +2063,17 @@ public class DefaultServlet extends HttpServlet {
         }
 
         /*
-         * Open and read in file in one fell swoop to reduce chance chance of leaving handle open.
+         * Open and read in file in one fell swoop to reduce the chance of leaving handle open.
          */
         if (globalXsltFile != null) {
             File f = validateGlobalXsltFile();
             if (f != null) {
                 long globalXsltFileSize = f.length();
                 if (globalXsltFileSize > Integer.MAX_VALUE) {
-                    log("globalXsltFile [" + f.getAbsolutePath() + "] is too big to buffer");
+                    log(sm.getString("defaultServlet.globalXSLTTooBig", f.getAbsolutePath()));
                 } else {
                     try (FileInputStream fis = new FileInputStream(f)) {
-                        byte b[] = new byte[(int) f.length()];
+                        byte[] b = new byte[(int) f.length()];
                         IOTools.readFully(fis, b);
                         return new StreamSource(new ByteArrayInputStream(b));
                     }
@@ -2041,35 +2180,48 @@ public class DefaultServlet extends HttpServlet {
     protected boolean checkIfMatch(HttpServletRequest request, HttpServletResponse response, WebResource resource)
             throws IOException {
 
-        String headerValue = request.getHeader("If-Match");
-        if (headerValue != null) {
+        boolean conditionSatisfied = false;
+        Enumeration<String> headerValues = request.getHeaders("If-Match");
+        String resourceETag = generateETag(resource);
 
-            boolean conditionSatisfied;
-
-            if (!headerValue.equals("*")) {
-                String resourceETag = generateETag(resource);
-                if (resourceETag == null) {
-                    conditionSatisfied = false;
-                } else {
-                    // RFC 7232 requires strong comparison for If-Match headers
-                    Boolean matched = EntityTag.compareEntityTag(new StringReader(headerValue), false, resourceETag);
-                    if (matched == null) {
-                        if (debug > 10) {
-                            log("DefaultServlet.checkIfMatch:  Invalid header value [" + headerValue + "]");
-                        }
-                        response.sendError(HttpServletResponse.SC_BAD_REQUEST);
-                        return false;
-                    }
-                    conditionSatisfied = matched.booleanValue();
+        boolean hasAsteriskValue = false;// check existence of special header value '*'
+        int headerCount = 0;
+        while (headerValues.hasMoreElements() && !conditionSatisfied) {
+            headerCount++;
+            String headerValue = headerValues.nextElement();
+            if ("*".equals(headerValue)) {
+                hasAsteriskValue = true;
+                if (resourceETag != null) {
+                    conditionSatisfied = true;
                 }
             } else {
-                conditionSatisfied = true;
+                // RFC 7232 requires strong comparison for If-Match headers
+                Boolean matched = EntityTag.compareEntityTag(new StringReader(headerValue), false, resourceETag);
+                if (matched == null) {
+                    if (debug > 10) {
+                        log("DefaultServlet.checkIfMatch:  Invalid header value [" + headerValue + "]");
+                    }
+                    response.sendError(HttpServletResponse.SC_BAD_REQUEST);
+                    return false;
+                } else {
+                    conditionSatisfied = matched.booleanValue();
+                }
             }
+        }
+        if (headerValues.hasMoreElements()) {
+            headerCount++;
+        }
 
-            if (!conditionSatisfied) {
-                response.sendError(HttpServletResponse.SC_PRECONDITION_FAILED);
-                return false;
-            }
+        if (hasAsteriskValue && headerCount > 1) {
+            // Note that an If-Match header field with a list value containing "*" and other values (including other
+            // instances of "*") is syntactically invalid (therefore not allowed to be generated) and furthermore is
+            // unlikely to be interoperable.
+            response.sendError(HttpServletResponse.SC_BAD_REQUEST);
+            return false;
+        }
+        if (!conditionSatisfied) {
+            response.sendError(HttpServletResponse.SC_PRECONDITION_FAILED);
+            return false;
         }
         return true;
     }
@@ -2087,21 +2239,35 @@ public class DefaultServlet extends HttpServlet {
      */
     protected boolean checkIfModifiedSince(HttpServletRequest request, HttpServletResponse response,
             WebResource resource) {
+
+        String method = request.getMethod();
+        if (!"GET".equals(method) && !"HEAD".equals(method)) {
+            return true;
+        }
+
+        long resourceLastModified = resource.getLastModified();
+        if (resourceLastModified <= 0) {
+            // MUST ignore if the resource does not have a modification date available.
+            return true;
+        }
+
+        // Must be at least one header for this method to be called
+        Enumeration<String> headerEnum = request.getHeaders("If-Modified-Since");
+        headerEnum.nextElement();
+        if (headerEnum.hasMoreElements()) {
+            // If-Modified-Since is a list of dates
+            return true;
+        }
+
         try {
+            // Header is present so -1 will be not returned. Only a valid date or an IAE are possible.
             long headerValue = request.getDateHeader("If-Modified-Since");
-            long lastModified = resource.getLastModified();
-            if (headerValue != -1) {
-
-                // If an If-None-Match header has been specified, if modified since
-                // is ignored.
-                if ((request.getHeader("If-None-Match") == null) && (lastModified < headerValue + 1000)) {
-                    // The entity has not been modified since the date
-                    // specified by the client. This is not an error case.
-                    response.setStatus(HttpServletResponse.SC_NOT_MODIFIED);
-                    response.setHeader("ETag", generateETag(resource));
-
-                    return false;
-                }
+            if (resourceLastModified < (headerValue + 1000)) {
+                // The entity has not been modified since the date
+                // specified by the client. This is not an error case.
+                response.setStatus(HttpServletResponse.SC_NOT_MODIFIED);
+                response.setHeader("ETag", generateETag(resource));
+                return false;
             }
         } catch (IllegalArgumentException illegalArgument) {
             return true;
@@ -2125,44 +2291,71 @@ public class DefaultServlet extends HttpServlet {
     protected boolean checkIfNoneMatch(HttpServletRequest request, HttpServletResponse response, WebResource resource)
             throws IOException {
 
-        String headerValue = request.getHeader("If-None-Match");
-        if (headerValue != null) {
+        String resourceETag = generateETag(resource);
 
-            boolean conditionSatisfied;
+        Enumeration<String> headerValues = request.getHeaders("If-None-Match");
+        boolean hasAsteriskValue = false;// check existence of special header value '*'
+        boolean conditionSatisfied = true;
+        int headerCount = 0;
+        while (headerValues.hasMoreElements()) {
+            headerCount++;
+            String headerValue = headerValues.nextElement();
 
-            String resourceETag = generateETag(resource);
-            if (!headerValue.equals("*")) {
-                if (resourceETag == null) {
+            if (headerValue.equals("*")) {
+                hasAsteriskValue = true;
+                if (headerCount > 1 || headerValues.hasMoreElements()) {
                     conditionSatisfied = false;
                 } else {
-                    // RFC 7232 requires weak comparison for If-None-Match headers
-                    Boolean matched = EntityTag.compareEntityTag(new StringReader(headerValue), true, resourceETag);
-                    if (matched == null) {
-                        if (debug > 10) {
-                            log("DefaultServlet.checkIfNoneMatch:  Invalid header value [" + headerValue + "]");
-                        }
-                        response.sendError(HttpServletResponse.SC_BAD_REQUEST);
-                        return false;
+                    // asterisk '*' is the only field value.
+                    // RFC9110: If the field value is "*", the condition is false if the origin server has a current
+                    // representation for the target resource.
+                    if (resourceETag != null) {
+                        conditionSatisfied = false;
                     }
-                    conditionSatisfied = matched.booleanValue();
                 }
+                break;
             } else {
-                conditionSatisfied = true;
-            }
-
-            if (conditionSatisfied) {
-                // For GET and HEAD, we should respond with
-                // 304 Not Modified.
-                // For every other method, 412 Precondition Failed is sent
-                // back.
-                if ("GET".equals(request.getMethod()) || "HEAD".equals(request.getMethod())) {
-                    response.setStatus(HttpServletResponse.SC_NOT_MODIFIED);
-                    response.setHeader("ETag", resourceETag);
-                } else {
-                    response.sendError(HttpServletResponse.SC_PRECONDITION_FAILED);
+                // RFC 7232 requires weak comparison for If-None-Match headers
+                Boolean matched = EntityTag.compareEntityTag(new StringReader(headerValue), true, resourceETag);
+                if (matched == null) {
+                    if (debug > 10) {
+                        log("DefaultServlet.checkIfNoneMatch:  Invalid header value [" + headerValue + "]");
+                    }
+                    response.sendError(HttpServletResponse.SC_BAD_REQUEST);
+                    return false;
                 }
-                return false;
+                if (matched.booleanValue()) {
+                    // RFC9110: If the field value is a list of entity tags, the condition is false if one of the
+                    // listed tags
+                    // matches the entity tag of the selected representation.
+                    conditionSatisfied = false;
+                    break;
+                }
             }
+        }
+        if (headerValues.hasMoreElements()) {
+            headerCount++;
+        }
+
+        if (hasAsteriskValue && headerCount > 1) {
+            // Note that an If-None-Match header field with a list value containing "*" and other values (including
+            // other instances of "*") is syntactically invalid (therefore not allowed to be generated) and furthermore
+            // is unlikely to be interoperable.
+            response.sendError(HttpServletResponse.SC_BAD_REQUEST);
+            return false;
+        }
+        if (!conditionSatisfied) {
+            // For GET and HEAD, we should respond with
+            // 304 Not Modified.
+            // For every other method, 412 Precondition Failed is sent
+            // back.
+            if ("GET".equals(request.getMethod()) || "HEAD".equals(request.getMethod())) {
+                response.setStatus(HttpServletResponse.SC_NOT_MODIFIED);
+                response.setHeader("ETag", resourceETag);
+            } else {
+                response.sendError(HttpServletResponse.SC_PRECONDITION_FAILED);
+            }
+            return false;
         }
         return true;
     }
@@ -2182,16 +2375,28 @@ public class DefaultServlet extends HttpServlet {
      */
     protected boolean checkIfUnmodifiedSince(HttpServletRequest request, HttpServletResponse response,
             WebResource resource) throws IOException {
+
+        long resourceLastModified = resource.getLastModified();
+        if (resourceLastModified <= 0) {
+            // MUST ignore if the resource does not have a modification date available.
+            return true;
+        }
+        // Must be at least one header for this method to be called
+        Enumeration<String> headerEnum = request.getHeaders("If-Unmodified-Since");
+        headerEnum.nextElement();
+        if (headerEnum.hasMoreElements()) {
+            // If-Unmodified-Since is a list of dates
+            return true;
+        }
+
         try {
-            long lastModified = resource.getLastModified();
+            // Header is present so -1 will be not returned. Only a valid date or an IAE are possible.
             long headerValue = request.getDateHeader("If-Unmodified-Since");
-            if (headerValue != -1) {
-                if (lastModified >= (headerValue + 1000)) {
-                    // The entity has not been modified since the date
-                    // specified by the client. This is not an error case.
-                    response.sendError(HttpServletResponse.SC_PRECONDITION_FAILED);
-                    return false;
-                }
+            if (resourceLastModified >= (headerValue + 1000)) {
+                // The entity has not been modified since the date
+                // specified by the client. This is not an error case.
+                response.sendError(HttpServletResponse.SC_PRECONDITION_FAILED);
+                return false;
             }
         } catch (IllegalArgumentException illegalArgument) {
             return true;
@@ -2199,6 +2404,79 @@ public class DefaultServlet extends HttpServlet {
         return true;
     }
 
+
+    /**
+     * Check if the if-range condition is satisfied. The calling method is required to ensure a Range header is present
+     * and that Range requests are supported for the current resource.
+     *
+     * @param request  The servlet request we are processing
+     * @param response The servlet response we are creating
+     * @param resource The resource
+     *
+     * @return {@code true} if the resource meets the specified condition, and {@code false} if the condition is not
+     *             satisfied, resulting in transfer of the new selected representation instead of a 412 (Precondition
+     *             Failed) response. If the if-range condition is not valid then an appropriate status code will be set,
+     *             the response will be committed and this method will return {@code false}
+     *
+     * @throws IOException an IO error occurred
+     */
+    protected boolean checkIfRange(HttpServletRequest request, HttpServletResponse response, WebResource resource)
+            throws IOException {
+        String resourceETag = generateETag(resource);
+        long resourceLastModified = resource.getLastModified();
+
+        Enumeration<String> headerEnum = request.getHeaders("If-Range");
+        if (!headerEnum.hasMoreElements()) {
+            // If-Range is not present
+            return true;
+        }
+        String headerValue = headerEnum.nextElement().trim();
+        if (headerEnum.hasMoreElements()) {
+            // Multiple If-Range headers
+            response.sendError(HttpServletResponse.SC_BAD_REQUEST);
+            return false;
+        }
+
+        if (headerValue.length() > 2 && (headerValue.charAt(0) == '"' || headerValue.charAt(2) == '"')) {
+            boolean weakETag = headerValue.startsWith("W/\"");
+            if ((!weakETag && headerValue.charAt(0) != '"') ||
+                    headerValue.charAt(headerValue.length() - 1) != '"' ||
+                    headerValue.indexOf('"', weakETag ? 3 : 1) != headerValue.length() - 1) {
+                // Not a single entity tag
+                response.sendError(HttpServletResponse.SC_BAD_REQUEST);
+                return false;
+            }
+            // If the ETag the client gave does not match the entity
+            // etag, then the entire entity is returned.
+            return !weakETag && resourceETag != null && resourceETag.equals(headerValue);
+        } else {
+            long headerValueTime = -1L;
+            try {
+                headerValueTime = request.getDateHeader("If-Range");
+            } catch (IllegalArgumentException e) {
+                // Ignore
+            }
+            if (headerValueTime >= 0) {
+                // unit of HTTP date is second, ignore millisecond part.
+                return resourceLastModified >= headerValueTime && resourceLastModified < headerValueTime + 1000;
+            } else {
+                // Not a single entity tag and not a valid date either
+                response.sendError(HttpServletResponse.SC_BAD_REQUEST);
+                return false;
+            }
+        }
+
+    }
+
+    /**
+     * Checks if range request is supported by server
+     *
+     * @return <code>true</code> server supports range requests feature.
+     */
+    protected boolean isRangeRequestsSupported() {
+        // Range-Requests optional feature is enabled implicitly.
+        return true;
+    }
 
     /**
      * Provides the entity tag (the ETag header) for the given resource. Intended to be over-ridden by custom
@@ -2209,7 +2487,11 @@ public class DefaultServlet extends HttpServlet {
      * @return The result of calling {@link WebResource#getETag()} on the given resource
      */
     protected String generateETag(WebResource resource) {
-        return resource.getETag();
+        if (useStrongETags) {
+            return resource.getStrongETag();
+        } else {
+            return resource.getETag();
+        }
     }
 
 
@@ -2224,11 +2506,10 @@ public class DefaultServlet extends HttpServlet {
      */
     protected void copy(InputStream is, ServletOutputStream ostream) throws IOException {
 
-        IOException exception = null;
         InputStream istream = new BufferedInputStream(is, input);
 
         // Copy the input stream to the output stream
-        exception = copyRange(istream, ostream);
+        IOException exception = copyRange(istream, ostream);
 
         // Clean up the input stream
         istream.close();
@@ -2251,7 +2532,6 @@ public class DefaultServlet extends HttpServlet {
      * @exception IOException if an input/output error occurs
      */
     protected void copy(InputStream is, PrintWriter writer, String encoding) throws IOException {
-        IOException exception = null;
 
         Reader reader;
         if (encoding == null) {
@@ -2261,7 +2541,7 @@ public class DefaultServlet extends HttpServlet {
         }
 
         // Copy the input stream to the output stream
-        exception = copyRange(reader, writer);
+        IOException exception = copyRange(reader, writer);
 
         // Clean up the reader
         reader.close();
@@ -2287,11 +2567,9 @@ public class DefaultServlet extends HttpServlet {
     protected void copy(WebResource resource, long length, ServletOutputStream ostream, Ranges.Entry range)
             throws IOException {
 
-        IOException exception = null;
-
         InputStream resourceInputStream = resource.getInputStream();
         InputStream istream = new BufferedInputStream(resourceInputStream, input);
-        exception = copyRange(istream, ostream, getStart(range, length), getEnd(range, length));
+        IOException exception = copyRange(istream, ostream, getStart(range, length), getEnd(range, length));
 
         // Clean up the input stream
         istream.close();
@@ -2336,7 +2614,7 @@ public class DefaultServlet extends HttpServlet {
                 }
                 long start = getStart(range, length);
                 long end = getEnd(range, length);
-                ostream.println("Content-Range: bytes " + start + "-" + end + "/" + (end - start));
+                ostream.println("Content-Range: bytes " + start + "-" + end + "/" + length);
                 ostream.println();
 
                 // Printing content
@@ -2368,18 +2646,16 @@ public class DefaultServlet extends HttpServlet {
 
         // Copy the input stream to the output stream
         IOException exception = null;
-        byte buffer[] = new byte[input];
-        int len = buffer.length;
+        byte[] buffer = new byte[input];
         while (true) {
             try {
-                len = istream.read(buffer);
+                int len = istream.read(buffer);
                 if (len == -1) {
                     break;
                 }
                 ostream.write(buffer, 0, len);
             } catch (IOException e) {
                 exception = e;
-                len = -1;
                 break;
             }
         }
@@ -2401,18 +2677,16 @@ public class DefaultServlet extends HttpServlet {
 
         // Copy the input stream to the output stream
         IOException exception = null;
-        char buffer[] = new char[input];
-        int len = buffer.length;
+        char[] buffer = new char[input];
         while (true) {
             try {
-                len = reader.read(buffer);
+                int len = reader.read(buffer);
                 if (len == -1) {
                     break;
                 }
                 writer.write(buffer, 0, len);
             } catch (IOException e) {
                 exception = e;
-                len = -1;
                 break;
             }
         }
@@ -2435,10 +2709,10 @@ public class DefaultServlet extends HttpServlet {
     protected IOException copyRange(InputStream istream, ServletOutputStream ostream, long start, long end) {
 
         if (debug > 10) {
-            log("Serving bytes:" + start + "-" + end);
+            log("Serving bytes: " + start + "-" + end);
         }
 
-        long skipped = 0;
+        long skipped;
         try {
             skipped = istream.skip(start);
         } catch (IOException e) {
@@ -2451,7 +2725,7 @@ public class DefaultServlet extends HttpServlet {
         IOException exception = null;
         long bytesToRead = end - start + 1;
 
-        byte buffer[] = new byte[input];
+        byte[] buffer = new byte[input];
         int len = buffer.length;
         while ((bytesToRead > 0) && (len >= buffer.length)) {
             try {
@@ -2467,9 +2741,6 @@ public class DefaultServlet extends HttpServlet {
                 exception = e;
                 len = -1;
             }
-            if (len < buffer.length) {
-                break;
-            }
         }
 
         return exception;
@@ -2477,26 +2748,13 @@ public class DefaultServlet extends HttpServlet {
     }
 
 
-    protected static class CompressionFormat implements Serializable {
+    protected record CompressionFormat(String extension, String encoding) implements Serializable {
+        @Serial
         private static final long serialVersionUID = 1L;
-        public final String extension;
-        public final String encoding;
-
-        public CompressionFormat(String extension, String encoding) {
-            this.extension = extension;
-            this.encoding = encoding;
-        }
     }
 
 
-    private static class PrecompressedResource {
-        public final WebResource resource;
-        public final CompressionFormat format;
-
-        private PrecompressedResource(WebResource resource, CompressionFormat format) {
-            this.resource = resource;
-            this.format = format;
-        }
+    private record PrecompressedResource(WebResource resource, CompressionFormat format) {
     }
 
 
@@ -2524,7 +2782,7 @@ public class DefaultServlet extends HttpServlet {
     /**
      * A class encapsulating the sorting of resources.
      */
-    private static class SortManager {
+    protected static class SortManager {
         /**
          * The default sort.
          */
@@ -2645,7 +2903,7 @@ public class DefaultServlet extends HttpServlet {
          * @return An Order specifying the column and ascending/descending to be applied to resources.
          */
         public Order getOrder(String order) {
-            if (null == order || 0 == order.trim().length()) {
+            if (null == order || order.trim().isEmpty()) {
                 return Order.DEFAULT;
             }
 
