@@ -19,6 +19,7 @@ package org.apache.tomcat.util.descriptor.web;
 import java.io.UnsupportedEncodingException;
 import java.net.URL;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.EnumSet;
@@ -53,9 +54,9 @@ import org.apache.tomcat.util.security.Escape;
  * Representation of common elements of web.xml and web-fragment.xml. Provides
  * a repository for parsed data before the elements are merged.
  * Validation is spread between multiple classes:
- * The digester checks for structural correctness (eg single login-config)
- * This class checks for invalid duplicates (eg filter/servlet names)
- * StandardContext will check validity of values (eg URL formats etc)
+ * The digester checks for structural correctness (e.g. single login-config)
+ * This class checks for invalid duplicates (e.g. filter/servlet names)
+ * StandardContext will check validity of values (e.g. URL formats etc)
  */
 public class WebXml extends XmlEncodingBase implements DocumentProperties.Charset {
 
@@ -198,6 +199,10 @@ public class WebXml extends XmlEncodingBase implements DocumentProperties.Charse
                 majorVersion = 6;
                 minorVersion = 1;
                 break;
+            case "6.2":
+                majorVersion = 6;
+                minorVersion = 2;
+                break;
             default:
                 log.warn(sm.getString("webXml.version.unknown", version));
         }
@@ -337,7 +342,7 @@ public class WebXml extends XmlEncodingBase implements DocumentProperties.Charse
     public void addServlet(ServletDef servletDef) {
         servlets.put(servletDef.getServletName(), servletDef);
         if (overridable) {
-            servletDef.setOverridable(overridable);
+            servletDef.setOverridable(true);
         }
     }
     public Map<String,ServletDef> getServlets() { return servlets; }
@@ -598,7 +603,7 @@ public class WebXml extends XmlEncodingBase implements DocumentProperties.Charse
     }
 
     // post-construct elements
-    private Map<String, String> postConstructMethods = new HashMap<>();
+    private final Map<String, String> postConstructMethods = new HashMap<>();
     public void addPostConstructMethods(String clazz, String method) {
         if (!postConstructMethods.containsKey(clazz)) {
             postConstructMethods.put(clazz, method);
@@ -609,7 +614,7 @@ public class WebXml extends XmlEncodingBase implements DocumentProperties.Charse
     }
 
     // pre-destroy elements
-    private Map<String, String> preDestroyMethods = new HashMap<>();
+    private final Map<String, String> preDestroyMethods = new HashMap<>();
     public void addPreDestroyMethods(String clazz, String method) {
         if (!preDestroyMethods.containsKey(clazz)) {
             preDestroyMethods.put(clazz, method);
@@ -773,6 +778,9 @@ public class WebXml extends XmlEncodingBase implements DocumentProperties.Charse
             } else if ("6.1".equals(version)) {
                 javaeeNamespace = XmlIdentifiers.JAKARTAEE_11_NS;
                 webXmlSchemaLocation = XmlIdentifiers.WEB_61_XSD;
+            } else if ("6.2".equals(version)) {
+                javaeeNamespace = XmlIdentifiers.JAKARTAEE_12_NS;
+                webXmlSchemaLocation = XmlIdentifiers.WEB_62_XSD;
             }
             sb.append("<web-app xmlns=\"");
             sb.append(javaeeNamespace);
@@ -983,7 +991,7 @@ public class WebXml extends XmlEncodingBase implements DocumentProperties.Charse
         }
         sb.append('\n');
 
-        if (welcomeFiles.size() > 0) {
+        if (!welcomeFiles.isEmpty()) {
             sb.append("  <welcome-file-list>\n");
             for (String welcomeFile : welcomeFiles) {
                 appendElement(sb, INDENT4, "welcome-file", welcomeFile);
@@ -1013,7 +1021,7 @@ public class WebXml extends XmlEncodingBase implements DocumentProperties.Charse
 
         // jsp-config was added in Servlet 2.4. Prior to that, tag-libs was used
         // directly and jsp-property-group did not exist
-        if (taglibs.size() > 0 || jspPropertyGroups.size() > 0) {
+        if (!taglibs.isEmpty() || !jspPropertyGroups.isEmpty()) {
             if (getMajorVersion() > 2 || getMinorVersion() > 3) {
                 sb.append("  <jsp-config>\n");
             }
@@ -1370,7 +1378,7 @@ public class WebXml extends XmlEncodingBase implements DocumentProperties.Charse
 
         // locale-encoding-mapping-list was introduced in Servlet 2.4
         if (getMajorVersion() > 2 || getMinorVersion() > 3) {
-            if (localeEncodingMappings.size() > 0) {
+            if (!localeEncodingMappings.isEmpty()) {
                 sb.append("  <locale-encoding-mapping-list>\n");
                 for (Map.Entry<String, String> entry :
                         localeEncodingMappings.entrySet()) {
@@ -1404,12 +1412,7 @@ public class WebXml extends XmlEncodingBase implements DocumentProperties.Charse
 
 
     private String encodeUrl(String input) {
-        try {
-            return URLEncoder.encode(input, "UTF-8");
-        } catch (UnsupportedEncodingException e) {
-            // Impossible. UTF-8 is a required character set
-            return null;
-        }
+        return URLEncoder.encode(input, StandardCharsets.UTF_8);
     }
 
 
@@ -1418,7 +1421,7 @@ public class WebXml extends XmlEncodingBase implements DocumentProperties.Charse
         if (value == null) {
             return;
         }
-        if (value.length() == 0) {
+        if (value.isEmpty()) {
             sb.append(indent);
             sb.append('<');
             sb.append(elementName);
@@ -1485,7 +1488,7 @@ public class WebXml extends XmlEncodingBase implements DocumentProperties.Charse
             displayName = temp.getDisplayName();
         }
 
-        // Note: Not permitted in fragments but we also use fragments for
+        // Note: Not permitted in fragments, but we also use fragments for
         //       per-Host and global defaults so they may appear there
         if (!denyUncoveredHttpMethods) {
             for (WebXml fragment : fragments) {
@@ -1817,12 +1820,12 @@ public class WebXml extends XmlEncodingBase implements DocumentProperties.Charse
         }
         mainAttributes.putAll(mergedFragmentAttributes);
 
-        if (sessionConfig.getSessionTrackingModes().size() == 0) {
+        if (sessionConfig.getSessionTrackingModes().isEmpty()) {
             for (WebXml fragment : fragments) {
                 EnumSet<SessionTrackingMode> value =
                     fragment.getSessionConfig().getSessionTrackingModes();
-                if (value.size() > 0) {
-                    if (temp.getSessionConfig().getSessionTrackingModes().size() == 0) {
+                if (!value.isEmpty()) {
+                    if (temp.getSessionConfig().getSessionTrackingModes().isEmpty()) {
                         temp.getSessionConfig().getSessionTrackingModes().addAll(value);
                     } else if (value.equals(
                             temp.getSessionConfig().getSessionTrackingModes())) {
@@ -1849,7 +1852,7 @@ public class WebXml extends XmlEncodingBase implements DocumentProperties.Charse
         taglibs.putAll(temp.getTaglibs());
 
         for (WebXml fragment : fragments) {
-            if (fragment.alwaysAddWelcomeFiles || welcomeFiles.size() == 0) {
+            if (fragment.alwaysAddWelcomeFiles || welcomeFiles.isEmpty()) {
                 for (String welcomeFile : fragment.getWelcomeFiles()) {
                     addWelcomeFile(welcomeFile);
                 }
@@ -2048,10 +2051,8 @@ public class WebXml extends XmlEncodingBase implements DocumentProperties.Charse
                 dest.setAsyncSupported(src.getAsyncSupported().toString());
             }
         } else if (src.getAsyncSupported() != null) {
-            if (failOnConflict &&
-                    !src.getAsyncSupported().equals(dest.getAsyncSupported())) {
-                return false;
-            }
+            return !failOnConflict ||
+                src.getAsyncSupported().equals(dest.getAsyncSupported());
         }
 
         return true;
@@ -2091,11 +2092,8 @@ public class WebXml extends XmlEncodingBase implements DocumentProperties.Charse
         if (dest.getMaxRequestSize() == null) {
             dest.setMaxRequestSize(src.getMaxRequestSize());
         } else if (src.getMaxRequestSize() != null) {
-            if (failOnConflict &&
-                    !src.getMaxRequestSize().equals(
-                            dest.getMaxRequestSize())) {
-                return false;
-            }
+            return !failOnConflict ||
+                src.getMaxRequestSize().equals(dest.getMaxRequestSize());
         }
 
         return true;
@@ -2177,12 +2175,12 @@ public class WebXml extends XmlEncodingBase implements DocumentProperties.Charse
             for (WebXml fragment : fragments.values()) {
                 if (fragment.isDuplicated()) {
                     List<String> duplicates = fragment.getDuplicates();
-                    duplicates.add(0, fragment.getURL().toString());
+                    duplicates.addFirst(fragment.getURL().toString());
                     throw new IllegalArgumentException(
                             sm.getString("webXml.duplicateFragment", fragment.getName(), duplicates));
                 }
             }
-            // Stage 1. Make all dependencies bi-directional - this makes the
+            // Stage 1. Make all dependencies bidirectional - this makes the
             //          next stage simpler.
             for (WebXml fragment : fragments.values()) {
                 Iterator<String> before =
@@ -2289,7 +2287,7 @@ public class WebXml extends XmlEncodingBase implements DocumentProperties.Charse
 
         // The remainder of the processing needs to know about container
         // fragments
-        if (containerFragments.size() > 0) {
+        if (!containerFragments.isEmpty()) {
             Set<WebXml> result = new LinkedHashSet<>();
             if (containerFragments.iterator().next().getDelegate()) {
                 result.addAll(containerFragments);
@@ -2317,7 +2315,7 @@ public class WebXml extends XmlEncodingBase implements DocumentProperties.Charse
             Set<WebXml> unordered) {
         Set<WebXml> addedThisRound = new HashSet<>();
         Set<WebXml> addedLastRound = new HashSet<>();
-        while (unordered.size() > 0) {
+        while (!unordered.isEmpty()) {
             Iterator<WebXml> source = unordered.iterator();
             while (source.hasNext()) {
                 WebXml fragment = source.next();
@@ -2330,7 +2328,7 @@ public class WebXml extends XmlEncodingBase implements DocumentProperties.Charse
                     source.remove();
                 }
             }
-            if (addedThisRound.size() == 0) {
+            if (addedThisRound.isEmpty()) {
                 // Circular
                 throw new IllegalArgumentException(
                         sm.getString("webXml.mergeConflictOrder"));
